--- a/src/css/videoCarousel.css
+++ b/src/css/videoCarousel.css
@@ -211,7 +211,7 @@
 /* Responsive design */
 @media (max-width: 768px) {
   .video-carousel {
-    max-width: 350px;
+    max-width: 800px;
     height: 400px;
   }
   
@@ -228,12 +228,16 @@
     height: 50px;
     font-size: 20px;
   }
+
+  .video-arrow-down {
+    bottom: 0px;
+  }
 }
 
 @media (max-width: 480px) {
   .video-carousel {
-    max-width: 300px;
-    height: 350px;
+    max-width: 460px;
+    height: 400px;
   }
   
   .video-info {
@@ -246,5 +250,9 @@
   
   .video-info p {
     font-size: 12px;
+  }
+
+  .video-arrow-down {
+    bottom: -2px;
   }
 }
